Fix some bug about concurrency

--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,27 @@
 			<artifactId>redisson</artifactId>
 			<version>3.4.4</version>
 		</dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.2.1</version>
+        </dependency>
 
-	</dependencies>
+
+
+
+		<dependency>
+			<groupId>javax.json</groupId>
+			<artifactId>javax.json-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
