--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-
+		<elasticsearch.version>5.6.0</elasticsearch.version>
 		<spring-kafka.version>1.2.2.RELEASE</spring-kafka.version>
 	</properties>
 
@@ -114,13 +114,13 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>5.5.2</version>
+			<version>5.6.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>transport</artifactId>
-			<version>5.5.2</version>
+			<version>5.6.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
