--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.bridgestone.Main</mainClass>
+                            <mainClass>com.bridgestone.storm.StormMain</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
