--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,13 @@
                     <artifactId>log4j</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>compile</scope>
+            <scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.storm/storm-kafka -->
 		<dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>storm-kafka</artifactId>
-			<version>1.0.0</version>
+			<version>1.1.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
